<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#DDFFFFFF"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/arrow_back_icon" />

        <TextView
            android:id="@+id/operation_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/editor"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_primary"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/save" />
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="@color/design_default_color_primary"
            android:visibility="gone"
            android:text="@string/reset" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/editor_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FF000000"
        app:layout_constraintBottom_toTopOf="@+id/bottom_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <com.example.nsphotoeditor.utils.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/flip_preview_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/compare_original_press_and_hold"
        android:src="@drawable/flip_icon"
        app:layout_constraintBottom_toBottomOf="@+id/editor_container"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCFFFFFF"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_features"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/frame_controller_container"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="6dp"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent">-->

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/rv_frames"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="80dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                tools:layout_editor_absoluteY="6dp" />-->

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:id="@+id/constraintLayout"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/rv_frames">-->

<!--                <Button-->
<!--                    android:id="@+id/btn_cancel"-->
<!--                    style="@style/Widget.Material3.Button.TextButton"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/cancel"-->
<!--                    android:textColor="@color/black"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <Button-->
<!--                    android:id="@+id/btn_apply"-->
<!--                    style="@style/Widget.Material3.Button.TextButton"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/apply"-->
<!--                    android:textColor="@color/design_default_color_primary"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->
<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/controller_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="200"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekbar">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    style="@style/Widget.Material3.Button.TextButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_apply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:textColor="@color/design_default_color_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>